Initial placeholder from Tom

--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+<title>
+Workshop on Proof Mining
+</title>
+
+<link href="style.css" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+
+</head>
+
+<body>
+
+<div id="contents">
+
+<h1>
+International Workshop on Proof Mining<br> University of Bath, 7&ndash;9 September 2026
+</h1>
+
+  <p>
+AIMS OF WORKSHOP. Three paragraphs: What is proof mining for layperson; aims of workshop (copy-paste from 2024); exciting new areas.
+  </p>
+
+<div style="text-align: center;">
+<img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
+</div> 
+
+<p>
+The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
+</p>
+
+
+<h2>
+Programme
+</h2>
+
+<p>
+TBC
+</p>
+
+
+
+<!--
+<h2>
+Venue
+</h2>
+
+<p>
+The main campus of the University of Bath is located on a hilltop just outside the city centre. It is within walking distance from Bath Spa train station in principle, but you should allow 30&ndash;40 minutes and be wary that the route involves a steep uphill climb. A more comfortable alternative is to take one of the regular bus connections from the city centre to the campus. Further information on how to get to the university can be found <a href="https://www.bath.ac.uk/topics/travel-advice/">here</a>, with details of bus routes <a href="https://www.bath.ac.uk/guides/travelling-by-bus-to-the-university-of-bath/">here</a>.
+</p>
+-->
+
+<h2>
+Organisers
+</h2>
+
+  <ul class="lists"> 
+
+  <li><a href="https://nicholaspischke.github.io/">Nicholas Pischke</a></li>
+
+  <li><a href="https://t-powell.github.io/index.html">Thomas Powell</a></li>
+
+  </ul>
+
+
+<br>
+
+
+
+<div style="text-align: center;">
+<img style="float:middle; margin: 0 10px 10px 0;" width="200" height="auto" src="bath.png" class="center" />
+</div> 
+
+  
+
+</div>
+</body>
