Update index and create 2024 version

--- a/index.html
+++ b/index.html
@@ -16,33 +16,49 @@ Workshop on Proof Mining
 <div id="contents">
 
 <h1>
-International Workshop on Proof Mining<br> University of Bath, 7&ndash;9 September 2026
+Second Workshop on Proof Mining (WPM26)<br> University of Bath, 7&ndash;9 September 2026
 </h1>
 
-  <p>
-AIMS OF WORKSHOP. Three paragraphs: What is proof mining for layperson; aims of workshop (copy-paste from 2024); exciting new areas.
-  </p>
+<p><strong>An international workshop on proof mining will be held in Bath, United Kingdom on 7&ndash;9 of September 2026.</strong> </p>
+
+<p>
+The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
+</p>
 
 <div style="text-align: center;">
 <img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
 </div> 
 
 <p>
-The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
+ <strong>This is the second instance of a series of workshops dedicated to providing opportunities for people from the diverse areas connected to proof mining to meet, present work in progress and have an interdisciplinary exchange of ideas and knowledge. As such, the topics of interest in particular include logical aspects of proof interpretations as well as applied aspects from in particular nonlinear analysis and optimization.</strong></p><p>Click <a href="2024/index2024.html">here</a> for the previous edition.</p><hr>
+ <p>
+Proof theory started in the school of David Hilbert in G&ouml;ttingen in the beginning of the 20th century with what is today known as Hilbert's program, a project in mathematical logic which aimed to show that the use of so-called ideal (i.e. non-constructive, set-theoretic or infinitary) principles in proofs of concrete so-called real statements could be (at least in principle) eliminated. In a modern view, this program is often subsumed under the goal of proving the consistency of powerful theories containing such ideal principles in certain finitistic theories. As is well-known, G&ouml;del's second incompleteness theorem already rules out the provability of the consistency of many theories in themself.
+</p> 
+<p>
+While Hilbert's program in this specific sense is therefore impossible to achieve globally, Georg Kreisel's work starting in the 1950's under the name of "unwinding proofs" marks the beginning of a seminal paradigm shift in proof theory, namely to use proof-theoretic devices developed in the course of Hilbert's program to extract computational information from specific given mathematical proofs, showing that Hilbert's program is actually largely achievable as far as most proofs from the literature are concerned. This field gained maturity in the 1990's through the work of Ulrich Kohlenbach, since then known as Proof Mining, and by now comprises over 200 works with many case studies situated within numerical mathematics and many branches of modern analysis.
+</p>
+<p>
+Current research in this fast-growing area is concerned both with the development of new logical tools designed for facilitating a firm theoretical basis of this enterprise as well as with advancing the range of case studies into new territories relevant also for the mathematicians working in these fields in question. 
 </p>
 
+<h2>Scope</h2>
+<p>proof mining in all its facets, in particular comprising the following:</p>
+<ul>
+  <li>proof interpretations and, in particular, functional interpretations</li>
+  <li>applications to mainstream mathematics in various areas: fixed point theory, monotone operator theory, ergodic theory, number theory, probability theory, etc.</li>
+</ul>
+
+<h2>Participation</h2>
+<p>If you are interested in participating in the workshop, please contact <strong>Nicholas Pischke</strong> or <strong>Thomas Powell</strong> for registration. The deadline for registration for the workshop is the <strong>1st of August 2026</strong>. The meeting will take place in person. <strong>Please note that talks are by invitation only.</strong></p>
 
 <h2>
 Programme
 </h2>
 
 <p>
-TBC
+TBA
 </p>
 
-
-
-<!--
 <h2>
 Venue
 </h2>
@@ -50,7 +66,6 @@ Venue
 <p>
 The main campus of the University of Bath is located on a hilltop just outside the city centre. It is within walking distance from Bath Spa train station in principle, but you should allow 30&ndash;40 minutes and be wary that the route involves a steep uphill climb. A more comfortable alternative is to take one of the regular bus connections from the city centre to the campus. Further information on how to get to the university can be found <a href="https://www.bath.ac.uk/topics/travel-advice/">here</a>, with details of bus routes <a href="https://www.bath.ac.uk/guides/travelling-by-bus-to-the-university-of-bath/">here</a>.
 </p>
--->
 
 <h2>
 Organisers
@@ -67,13 +82,9 @@ Organisers
 
 <br>
 
-
-
 <div style="text-align: center;">
 <img style="float:middle; margin: 0 10px 10px 0;" width="200" height="auto" src="bath.png" class="center" />
-</div> 
-
-  
+</div>   
 
 </div>
 </body>
