--- a/index.html
+++ b/index.html
@@ -19,18 +19,8 @@ Workshop on Proof Mining
 Second Workshop on Proof Mining (WPM26)<br> University of Bath, 7&ndash;9 September 2026
 </h1>
 
-<p><strong>An international workshop on proof mining will be held in Bath, United Kingdom on 7&ndash;9 of September 2026.</strong> </p>
-
-<p>
-The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
-</p>
-
-<div style="text-align: center;">
-<img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
-</div> 
-
-<p>
- <strong>This is the second instance of a series of workshops dedicated to providing opportunities for people from the diverse areas connected to proof mining to meet, present work in progress and have an interdisciplinary exchange of ideas and knowledge. As such, the topics of interest in particular include logical aspects of proof interpretations as well as applied aspects from in particular nonlinear analysis and optimization.</strong></p><p>Click <a href="2024/index2024.html">here</a> for the previous edition.</p><hr>
+ <p>
+ This is the second instance of a series of workshops dedicated to providing opportunities for people from the diverse areas connected to proof mining to meet, present work in progress and have an interdisciplinary exchange of ideas and knowledge. As such, the topics of interest in particular include logical aspects of proof interpretations as well as applied aspects from in particular nonlinear analysis and optimization.</p><p>Click <a href="2024/index2024.html">here</a> for the previous edition.</p><hr>
  <p>
 Proof theory started in the school of David Hilbert in G&ouml;ttingen in the beginning of the 20th century with what is today known as Hilbert's program, a project in mathematical logic which aimed to show that the use of so-called ideal (i.e. non-constructive, set-theoretic or infinitary) principles in proofs of concrete so-called real statements could be (at least in principle) eliminated. In a modern view, this program is often subsumed under the goal of proving the consistency of powerful theories containing such ideal principles in certain finitistic theories. As is well-known, G&ouml;del's second incompleteness theorem already rules out the provability of the consistency of many theories in themself.
 </p> 
@@ -40,6 +30,15 @@ While Hilbert's program in this specific sense is therefore impossible to achiev
 <p>
 Current research in this fast-growing area is concerned both with the development of new logical tools designed for facilitating a firm theoretical basis of this enterprise as well as with advancing the range of case studies into new territories relevant also for the mathematicians working in these fields in question. 
 </p>
+
+<div style="text-align: center;">
+<img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
+</div> 
+
+ <p>
+The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
+</p>
+
 
 <h2>Scope</h2>
 <p>proof mining in all its facets, in particular comprising the following:</p>
