--- a/index.html
+++ b/index.html
@@ -20,7 +20,28 @@ Second Workshop on Proof Mining (WPM26)<br> University of Bath, 7&ndash;9 Septem
 </h1>
 
  <p>
- This is the second instance of a series of workshops dedicated to providing opportunities for people from the diverse areas connected to proof mining to meet, present work in progress and have an interdisciplinary exchange of ideas and knowledge. As such, the topics of interest in particular include logical aspects of proof interpretations as well as applied aspects from in particular nonlinear analysis and optimization.</p><p>Click <a href="2024/index2024.html">here</a> for the previous edition.</p><hr>
+ This is the second instance of a series of workshops dedicated to providing opportunities for people from the diverse areas connected to proof mining to meet, present work in progress, and exchange ideas and knowledge. The meeting will be interdiscplinary in nature, with a particular focus on </p>
+
+<ul>
+  <li>logical aspects of proof mining, including proof interpretations and logical systems,</li>
+  <li>applications to different areas of mainstream mathematics, including fixed point theory, monotone operator theory, ergodic theory, number theory and probability theory,</li>
+  <li>the use of proof assistants to formalise and potentially automate aspects of proof mining.</li>
+</ul>
+
+<p>Click <a href="2024/index2024.html">here</a> for the previous edition.</p>
+
+<div style="text-align: center;">
+<img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
+</div> 
+
+ <p>
+The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
+</p>
+
+<!--
+
+<hr>
+
  <p>
 Proof theory started in the school of David Hilbert in G&ouml;ttingen in the beginning of the 20th century with what is today known as Hilbert's program, a project in mathematical logic which aimed to show that the use of so-called ideal (i.e. non-constructive, set-theoretic or infinitary) principles in proofs of concrete so-called real statements could be (at least in principle) eliminated. In a modern view, this program is often subsumed under the goal of proving the consistency of powerful theories containing such ideal principles in certain finitistic theories. As is well-known, G&ouml;del's second incompleteness theorem already rules out the provability of the consistency of many theories in themself.
 </p> 
@@ -31,24 +52,11 @@ While Hilbert's program in this specific sense is therefore impossible to achiev
 Current research in this fast-growing area is concerned both with the development of new logical tools designed for facilitating a firm theoretical basis of this enterprise as well as with advancing the range of case studies into new territories relevant also for the mathematicians working in these fields in question. 
 </p>
 
-<div style="text-align: center;">
-<img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
-</div> 
+-->
 
- <p>
-The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
-</p>
-
-
-<h2>Scope</h2>
-<p>proof mining in all its facets, in particular comprising the following:</p>
-<ul>
-  <li>proof interpretations and, in particular, functional interpretations</li>
-  <li>applications to mainstream mathematics in various areas: fixed point theory, monotone operator theory, ergodic theory, number theory, probability theory, etc.</li>
-</ul>
 
 <h2>Participation</h2>
-<p>If you are interested in participating in the workshop, please contact <strong>Nicholas Pischke</strong> or <strong>Thomas Powell</strong> for registration. The deadline for registration for the workshop is the <strong>1st of August 2026</strong>. The meeting will take place in person. <strong>Please note that talks are by invitation only.</strong></p>
+<p>If you are interested in participating in the workshop, please contact <a href="https://nicholaspischke.github.io/">Nicholas Pischke</a> or <a href="https://t-powell.github.io/index.html">Thomas Powell</a> for registration. The deadline for registration is the <strong>1st of August 2026</strong>. The meeting will take place in person. Please note that talks are by invitation only.</p>
 
 <h2>
 Programme
