Update index, add ASL

--- a/index.html
+++ b/index.html
@@ -35,28 +35,13 @@ Second Workshop on Proof Mining (WPM26)<br> University of Bath, 7&ndash;9 Septem
 </div> 
 
  <p>
-The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath.
+The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath and the <a href="https://aslonline.org">ASL</a>.
 </p>
-
-<!--
-
-<hr>
-
- <p>
-Proof theory started in the school of David Hilbert in G&ouml;ttingen in the beginning of the 20th century with what is today known as Hilbert's program, a project in mathematical logic which aimed to show that the use of so-called ideal (i.e. non-constructive, set-theoretic or infinitary) principles in proofs of concrete so-called real statements could be (at least in principle) eliminated. In a modern view, this program is often subsumed under the goal of proving the consistency of powerful theories containing such ideal principles in certain finitistic theories. As is well-known, G&ouml;del's second incompleteness theorem already rules out the provability of the consistency of many theories in themself.
-</p> 
-<p>
-While Hilbert's program in this specific sense is therefore impossible to achieve globally, Georg Kreisel's work starting in the 1950's under the name of "unwinding proofs" marks the beginning of a seminal paradigm shift in proof theory, namely to use proof-theoretic devices developed in the course of Hilbert's program to extract computational information from specific given mathematical proofs, showing that Hilbert's program is actually largely achievable as far as most proofs from the literature are concerned. This field gained maturity in the 1990's through the work of Ulrich Kohlenbach, since then known as Proof Mining, and by now comprises over 200 works with many case studies situated within numerical mathematics and many branches of modern analysis.
-</p>
-<p>
-Current research in this fast-growing area is concerned both with the development of new logical tools designed for facilitating a firm theoretical basis of this enterprise as well as with advancing the range of case studies into new territories relevant also for the mathematicians working in these fields in question. 
-</p>
-
--->
-
 
 <h2>Participation</h2>
 <p>If you are interested in participating in the workshop, please contact <a href="https://nicholaspischke.github.io/">Nicholas Pischke</a> or <a href="https://t-powell.github.io/index.html">Thomas Powell</a> for registration. The deadline for registration is the <strong>1st of August 2026</strong>. The meeting will take place in person. Please note that talks are by invitation only.</p>
+
+<p>We are an ASL sponsored workshop which means that graduate students who are members of the ASL are eligible to apply for modest student travel awards to attend the meeting. Please read this <a href="https://aslonline.org/student-travel-awards/">webpage</a> and/or contact <a href="https://nicholaspischke.github.io/">Nicholas Pischke</a> or <a href="https://t-powell.github.io/index.html">Thomas Powell</a> for more information. Note that applications must be received three months prior to the start of the meeting.</p>
 
 <h2>
 Programme
@@ -90,7 +75,8 @@ Organisers
 <br>
 
 <div style="text-align: center;">
-<img style="float:middle; margin: 0 10px 10px 0;" width="200" height="auto" src="bath.png" class="center" />
+<img style="float:middle; margin: 0 10px 10px 0;" width="auto" height="50" src="bath.png" class="center" />
+<img style="float:middle; margin: 0 10px 10px 0;" width="auto" height="50" src="ASL.jpg" class="center" />
 </div>   
 
 </div>
