Update index, add blc

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@ Second Workshop on Proof Mining (WPM26)<br> University of Bath, 7&ndash;9 Septem
 <img float:middle; margin: 0 10px 10px 0;" width="600" height="auto" src="abbey.jpg" border=1 class="center" />
 </div> 
 
- <p>
-The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath and the <a href="https://aslonline.org">ASL</a>.
-</p>
+<p>The event is supported by the <a href="https://www.bath.ac.uk/departments/department-of-computer-science/">Department of Computer Science</a> at the University of Bath, the <a href="https://aslonline.org">Association for Symbolic Logic</a> and the <a href="https://www.blc-logic.org">British Logic Colloquium</a>.</p>
 
 <h2>Participation</h2>
 <p>If you are interested in participating in the workshop, please contact <a href="https://nicholaspischke.github.io/">Nicholas Pischke</a> or <a href="https://t-powell.github.io/index.html">Thomas Powell</a> for registration. The deadline for registration is the <strong>1st of August 2026</strong>. The meeting will take place in person. Please note that talks are by invitation only.</p>
@@ -77,6 +75,7 @@ Organisers
 <div style="text-align: center;">
 <img style="float:middle; margin: 0 10px 10px 0;" width="auto" height="50" src="bath.png" class="center" />
 <img style="float:middle; margin: 0 10px 10px 0;" width="auto" height="50" src="ASL.jpg" class="center" />
+<img style="float:middle; margin: 0 10px 10px 0;" width="auto" height="50" src="blc.png" class="center" />
 </div>   
 
 </div>
